--- a/2º_Curso/sistemas_xestion_empresarial/evaluacion_1/ejercicio_examen/styles/inicio.css
+++ b/2º_Curso/sistemas_xestion_empresarial/evaluacion_1/ejercicio_examen/styles/inicio.css
@@ -5,7 +5,7 @@
 }
 
 header {
-    background-color: #001222ff;
+    background-color: #454233;
     padding: 20px;
     display: flex;
     justify-content: end;
@@ -15,10 +15,3 @@ body {
     font-family: 'Inter';
     line-height: 1.6;
 }
-
-h1, h2, h3, h4, h5, h6 {
-    margin-bottom: 15px;
-    font-weight: 600;
-}
-
-
